Fix GUI alignment and scaling of newly processed portfolio logos

--- a/index.css
+++ b/index.css
@@ -642,8 +642,8 @@ p {
 }
 
 .logo-item-img {
-    max-height: 2.5rem;
-    max-width: 75%;
+    max-height: 4.5rem;
+    max-width: 65%;
     width: auto;
     object-fit: contain;
 }
